// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LegacyControlStyleTest ControlStyleTestWithRegularBorder #2 1`] = `
Object {
  "AutomationId": "control-style-switch-view",
  "Background": null,
  "BorderBrush": "#00000000",
  "BorderThickness": "0,0,0,0",
  "Clip": null,
  "CornerRadius": "0,0,0,0",
  "FlowDirection": "LeftToRight",
  "Height": 300,
  "HorizontalAlignment": "Stretch",
  "Margin": "0,0,0,0",
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 800,
  "XamlType": "Microsoft.ReactNative.ViewPanel",
  "children": Array [
    Object {
      "Background": "#33E1E1E1",
      "BorderBrush": "#55FF00FF",
      "BorderThickness": "1,1,1,1",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Foreground": "#FFFFFFFF",
      "Height": 50,
      "HorizontalAlignment": "Left",
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "VerticalAlignment": "Center",
      "Visibility": "Visible",
      "Width": 51,
      "XamlType": "Windows.UI.Xaml.Controls.ToggleSwitch",
      "children": Array [
        Object {
          "Background": "#33E1E1E1",
          "BorderBrush": "#55FF00FF",
          "BorderThickness": "1,1,1,1",
          "Clip": null,
          "CornerRadius": "0,0,0,0",
          "FlowDirection": "LeftToRight",
          "HorizontalAlignment": "Stretch",
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "XamlType": "Windows.UI.Xaml.Controls.Grid",
          "children": Array [
            Object {
              "Background": null,
              "BorderBrush": null,
              "BorderThickness": "0,0,0,0",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "HorizontalAlignment": "Left",
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "VerticalAlignment": "Top",
              "Visibility": "Visible",
              "XamlType": "Windows.UI.Xaml.Controls.Grid",
              "children": Array [
                Object {
                  "Background": "#00FFFFFF",
                  "BorderBrush": null,
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "HorizontalAlignment": "Stretch",
                  "Margin": "0,5,0,5",
                  "Name": "SwitchAreaGrid",
                  "Padding": "0,0,0,0",
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "XamlType": "Windows.UI.Xaml.Controls.Grid",
                },
                Object {
                  "Background": null,
                  "BorderBrush": null,
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "Foreground": "#FFFFFFFF",
                  "HorizontalAlignment": "Left",
                  "Margin": "0,0,0,0",
                  "Name": "OffContentPresenter",
                  "Padding": "0,0,0,0",
                  "VerticalAlignment": "Center",
                  "Visibility": "Visible",
                  "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
                },
                Object {
                  "Background": null,
                  "BorderBrush": null,
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "Foreground": "#FFFFFFFF",
                  "HorizontalAlignment": "Left",
                  "Margin": "0,0,0,0",
                  "Name": "OnContentPresenter",
                  "Padding": "0,0,0,0",
                  "VerticalAlignment": "Center",
                  "Visibility": "Visible",
                  "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
                },
                Object {
                  "Clip": null,
                  "FlowDirection": "LeftToRight",
                  "Height": 20,
                  "HorizontalAlignment": "Stretch",
                  "Margin": "0,0,0,0",
                  "Name": "OuterBorder",
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "Width": 40,
                  "XamlType": "Windows.UI.Xaml.Shapes.Rectangle",
                },
                Object {
                  "Clip": null,
                  "FlowDirection": "LeftToRight",
                  "Height": 20,
                  "HorizontalAlignment": "Stretch",
                  "Margin": "0,0,0,0",
                  "Name": "SwitchKnobBounds",
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "Width": 40,
                  "XamlType": "Windows.UI.Xaml.Shapes.Rectangle",
                },
                Object {
                  "Background": null,
                  "BorderBrush": null,
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "Height": 20,
                  "HorizontalAlignment": "Left",
                  "Margin": "0,0,0,0",
                  "Name": "SwitchKnob",
                  "Padding": "0,0,0,0",
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "Width": 20,
                  "XamlType": "Windows.UI.Xaml.Controls.Grid",
                  "children": Array [
                    Object {
                      "Clip": null,
                      "FlowDirection": "LeftToRight",
                      "Height": 10,
                      "HorizontalAlignment": "Stretch",
                      "Margin": "0,0,0,0",
                      "Name": "SwitchKnobOn",
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "Width": 10,
                      "XamlType": "Windows.UI.Xaml.Shapes.Ellipse",
                    },
                    Object {
                      "Clip": null,
                      "FlowDirection": "LeftToRight",
                      "Height": 10,
                      "HorizontalAlignment": "Stretch",
                      "Margin": "0,0,0,0",
                      "Name": "SwitchKnobOff",
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "Width": 10,
                      "XamlType": "Windows.UI.Xaml.Shapes.Ellipse",
                    },
                  ],
                },
                Object {
                  "Background": "#33000000",
                  "BorderBrush": "#00FFFFFF",
                  "BorderThickness": "1,1,1,1",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "Foreground": "#FFFFFFFF",
                  "HorizontalAlignment": "Stretch",
                  "Margin": "0,0,0,0",
                  "Name": "SwitchThumb",
                  "Padding": "0,0,0,0",
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "XamlType": "Windows.UI.Xaml.Controls.Primitives.Thumb",
                  "children": Array [
                    Object {
                      "Clip": null,
                      "FlowDirection": "LeftToRight",
                      "HorizontalAlignment": "Stretch",
                      "Margin": "0,0,0,0",
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "XamlType": "Windows.UI.Xaml.Shapes.Rectangle",
                    },
                  ],
                },
              ],
            },
          ],
        },
      ],
    },
    Object {
      "Background": "#33E1E1E1",
      "BorderBrush": "#55FF00FF",
      "BorderThickness": "1,1,1,1",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Foreground": "#FFFFFFFF",
      "Height": 50,
      "HorizontalAlignment": "Stretch",
      "Margin": "0,0,0,0",
      "Padding": "10,10,10,10",
      "Text": "",
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 800,
      "XamlType": "Windows.UI.Xaml.Controls.TextBox",
      "children": Array [
        Object {
          "Background": null,
          "BorderBrush": null,
          "BorderThickness": "0,0,0,0",
          "Clip": null,
          "CornerRadius": "0,0,0,0",
          "FlowDirection": "LeftToRight",
          "HorizontalAlignment": "Stretch",
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "XamlType": "Windows.UI.Xaml.Controls.Grid",
          "children": Array [
            Object {
              "Background": "#33E1E1E1",
              "BorderBrush": "#55FF00FF",
              "BorderThickness": "1,1,1,1",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "HorizontalAlignment": "Stretch",
              "Margin": "0,0,0,0",
              "Name": "BorderElement",
              "Padding": "0,0,0,0",
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "XamlType": "Windows.UI.Xaml.Controls.Border",
            },
            Object {
              "Background": "#00FFFFFF",
              "BorderBrush": "#00FFFFFF",
              "BorderThickness": "0,0,0,0",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "Foreground": "#FFFFFFFF",
              "HorizontalAlignment": "Stretch",
              "Margin": "1,1,1,1",
              "Name": "ContentElement",
              "Padding": "10,10,10,10",
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "XamlType": "Windows.UI.Xaml.Controls.ScrollViewer",
              "children": Array [
                Object {
                  "Background": null,
                  "BorderBrush": "#00FFFFFF",
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "HorizontalAlignment": "Stretch",
                  "Margin": "0,0,0,0",
                  "Name": "Root",
                  "Padding": "0,0,0,0",
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "XamlType": "Windows.UI.Xaml.Controls.Border",
                  "children": Array [
                    Object {
                      "Background": "#00FFFFFF",
                      "BorderBrush": null,
                      "BorderThickness": "0,0,0,0",
                      "Clip": null,
                      "CornerRadius": "0,0,0,0",
                      "FlowDirection": "LeftToRight",
                      "HorizontalAlignment": "Stretch",
                      "Margin": "0,0,0,0",
                      "Padding": "0,0,0,0",
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "XamlType": "Windows.UI.Xaml.Controls.Grid",
                      "children": Array [
                        Object {
                          "Background": null,
                          "BorderBrush": null,
                          "BorderThickness": "0,0,0,0",
                          "Clip": "Windows.UI.Xaml.Media.RectangleGeometry",
                          "CornerRadius": "0,0,0,0",
                          "FlowDirection": "LeftToRight",
                          "Foreground": "#FFFFFFFF",
                          "HorizontalAlignment": "Stretch",
                          "Margin": "10,10,10,10",
                          "Name": "ScrollContentPresenter",
                          "Padding": "0,0,0,0",
                          "VerticalAlignment": "Stretch",
                          "Visibility": "Visible",
                          "XamlType": "Windows.UI.Xaml.Controls.ScrollContentPresenter",
                          "children": Array [
                            Object {
                              "Clip": null,
                              "FlowDirection": "LeftToRight",
                              "HorizontalAlignment": "Stretch",
                              "Margin": "0,0,0,0",
                              "VerticalAlignment": "Stretch",
                              "Visibility": "Visible",
                              "XamlType": "Windows.UI.Xaml.FrameworkElement",
                            },
                          ],
                        },
                        Object {
                          "Background": null,
                          "BorderBrush": null,
                          "BorderThickness": "0,0,0,0",
                          "Clip": null,
                          "CornerRadius": "0,0,0,0",
                          "FlowDirection": "LeftToRight",
                          "HorizontalAlignment": "Stretch",
                          "Margin": "0,0,0,0",
                          "Padding": "0,0,0,0",
                          "VerticalAlignment": "Stretch",
                          "Visibility": "Visible",
                          "XamlType": "Windows.UI.Xaml.Controls.Grid",
                        },
                      ],
                    },
                  ],
                },
              ],
            },
            Object {
              "Clip": null,
              "FlowDirection": "LeftToRight",
              "Foreground": "#B3E1E1E1",
              "HorizontalAlignment": "Stretch",
              "Margin": "1,1,1,1",
              "Name": "PlaceholderTextContentPresenter",
              "Padding": "10,10,10,10",
              "Text": "TextBox",
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
            },
            Object {
              "Background": null,
              "BorderBrush": null,
              "BorderThickness": "0,0,0,0",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "Foreground": "#99000000",
              "HorizontalAlignment": "Stretch",
              "Margin": "0,0,0,0",
              "Name": "DescriptionPresenter",
              "Padding": "0,0,0,0",
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
            },
          ],
        },
      ],
    },
    Object {
      "Background": "#33E1E1E1",
      "BorderBrush": "#55FF00FF",
      "BorderThickness": "1,1,1,1",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Foreground": "#FFFFFFFF",
      "Height": 50,
      "HorizontalAlignment": "Stretch",
      "Margin": "0,0,0,0",
      "Padding": "10,10,10,10",
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 800,
      "XamlType": "Windows.UI.Xaml.Controls.PasswordBox",
      "children": Array [
        Object {
          "Background": null,
          "BorderBrush": null,
          "BorderThickness": "0,0,0,0",
          "Clip": null,
          "CornerRadius": "0,0,0,0",
          "FlowDirection": "LeftToRight",
          "HorizontalAlignment": "Stretch",
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "XamlType": "Windows.UI.Xaml.Controls.Grid",
          "children": Array [
            Object {
              "Background": "#33E1E1E1",
              "BorderBrush": "#55FF00FF",
              "BorderThickness": "1,1,1,1",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "HorizontalAlignment": "Stretch",
              "Margin": "0,0,0,0",
              "Name": "BorderElement",
              "Padding": "0,0,0,0",
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "XamlType": "Windows.UI.Xaml.Controls.Border",
            },
            Object {
              "Background": "#00FFFFFF",
              "BorderBrush": "#00FFFFFF",
              "BorderThickness": "0,0,0,0",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "Foreground": "#FFFFFFFF",
              "HorizontalAlignment": "Stretch",
              "Margin": "1,1,1,1",
              "Name": "ContentElement",
              "Padding": "10,10,10,10",
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "XamlType": "Windows.UI.Xaml.Controls.ScrollViewer",
              "children": Array [
                Object {
                  "Background": null,
                  "BorderBrush": "#00FFFFFF",
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "HorizontalAlignment": "Stretch",
                  "Margin": "0,0,0,0",
                  "Name": "Root",
                  "Padding": "0,0,0,0",
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "XamlType": "Windows.UI.Xaml.Controls.Border",
                  "children": Array [
                    Object {
                      "Background": "#00FFFFFF",
                      "BorderBrush": null,
                      "BorderThickness": "0,0,0,0",
                      "Clip": null,
                      "CornerRadius": "0,0,0,0",
                      "FlowDirection": "LeftToRight",
                      "HorizontalAlignment": "Stretch",
                      "Margin": "0,0,0,0",
                      "Padding": "0,0,0,0",
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "XamlType": "Windows.UI.Xaml.Controls.Grid",
                      "children": Array [
                        Object {
                          "Background": null,
                          "BorderBrush": null,
                          "BorderThickness": "0,0,0,0",
                          "Clip": "Windows.UI.Xaml.Media.RectangleGeometry",
                          "CornerRadius": "0,0,0,0",
                          "FlowDirection": "LeftToRight",
                          "Foreground": "#FFFFFFFF",
                          "HorizontalAlignment": "Stretch",
                          "Margin": "10,10,10,10",
                          "Name": "ScrollContentPresenter",
                          "Padding": "0,0,0,0",
                          "VerticalAlignment": "Stretch",
                          "Visibility": "Visible",
                          "XamlType": "Windows.UI.Xaml.Controls.ScrollContentPresenter",
                          "children": Array [
                            Object {
                              "Clip": null,
                              "FlowDirection": "LeftToRight",
                              "HorizontalAlignment": "Stretch",
                              "Margin": "0,0,0,0",
                              "VerticalAlignment": "Stretch",
                              "Visibility": "Visible",
                              "XamlType": "Windows.UI.Xaml.FrameworkElement",
                            },
                          ],
                        },
                        Object {
                          "Background": null,
                          "BorderBrush": null,
                          "BorderThickness": "0,0,0,0",
                          "Clip": null,
                          "CornerRadius": "0,0,0,0",
                          "FlowDirection": "LeftToRight",
                          "HorizontalAlignment": "Stretch",
                          "Margin": "0,0,0,0",
                          "Padding": "0,0,0,0",
                          "VerticalAlignment": "Stretch",
                          "Visibility": "Visible",
                          "XamlType": "Windows.UI.Xaml.Controls.Grid",
                        },
                      ],
                    },
                  ],
                },
              ],
            },
            Object {
              "Clip": null,
              "FlowDirection": "LeftToRight",
              "Foreground": "#B3E1E1E1",
              "HorizontalAlignment": "Stretch",
              "Margin": "1,1,1,1",
              "Name": "PlaceholderTextContentPresenter",
              "Padding": "10,10,10,10",
              "Text": "Password",
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
            },
            Object {
              "Background": null,
              "BorderBrush": null,
              "BorderThickness": "0,0,0,0",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "Foreground": "#99000000",
              "HorizontalAlignment": "Stretch",
              "Margin": "0,0,0,0",
              "Name": "DescriptionPresenter",
              "Padding": "0,0,0,0",
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
            },
          ],
        },
      ],
    },
    Object {
      "Background": "#33E1E1E1",
      "BorderBrush": "#55FF00FF",
      "BorderThickness": "1,1,1,1",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Foreground": "#FFFFFFFF",
      "Height": 50,
      "HorizontalAlignment": "Left",
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "VerticalAlignment": "Center",
      "Visibility": "Visible",
      "Width": 150,
      "XamlType": "Windows.UI.Xaml.Controls.CalendarDatePicker",
      "children": Array [
        Object {
          "Background": null,
          "BorderBrush": null,
          "BorderThickness": "0,0,0,0",
          "Clip": null,
          "CornerRadius": "0,0,0,0",
          "FlowDirection": "LeftToRight",
          "HorizontalAlignment": "Stretch",
          "Margin": "0,0,0,0",
          "Name": "Root",
          "Padding": "0,0,0,0",
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "XamlType": "Windows.UI.Xaml.Controls.Grid",
          "children": Array [
            Object {
              "Background": "#33E1E1E1",
              "BorderBrush": "#55FF00FF",
              "BorderThickness": "1,1,1,1",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "HorizontalAlignment": "Stretch",
              "Margin": "0,0,0,0",
              "Name": "Background",
              "Padding": "0,0,0,0",
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "XamlType": "Windows.UI.Xaml.Controls.Border",
            },
            Object {
              "Clip": null,
              "FlowDirection": "LeftToRight",
              "Foreground": "#99000000",
              "HorizontalAlignment": "Left",
              "Margin": "0,0,0,0",
              "Name": "DateText",
              "Padding": "12,0,0,2",
              "Text": "select a date",
              "VerticalAlignment": "Center",
              "Visibility": "Visible",
              "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
            },
            Object {
              "Clip": null,
              "FlowDirection": "LeftToRight",
              "Foreground": "#CC000000",
              "HorizontalAlignment": "Center",
              "Margin": "0,0,0,0",
              "Name": "CalendarGlyph",
              "VerticalAlignment": "Center",
              "Visibility": "Visible",
              "XamlType": "Windows.UI.Xaml.Controls.FontIcon",
              "children": Array [
                Object {
                  "Background": "#00000000",
                  "BorderBrush": null,
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "HorizontalAlignment": "Stretch",
                  "Margin": "0,0,0,0",
                  "Padding": "0,0,0,0",
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "XamlType": "Windows.UI.Xaml.Controls.Grid",
                  "children": Array [
                    Object {
                      "Clip": null,
                      "FlowDirection": "LeftToRight",
                      "Foreground": "#CC000000",
                      "HorizontalAlignment": "Stretch",
                      "Margin": "0,0,0,0",
                      "Padding": "0,0,0,0",
                      "Text": "",
                      "VerticalAlignment": "Center",
                      "Visibility": "Visible",
                      "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
                    },
                  ],
                },
              ],
            },
            Object {
              "Background": null,
              "BorderBrush": null,
              "BorderThickness": "0,0,0,0",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "Foreground": "#99000000",
              "HorizontalAlignment": "Stretch",
              "Margin": "0,0,0,0",
              "Name": "DescriptionPresenter",
              "Padding": "0,0,0,0",
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
            },
          ],
        },
      ],
    },
    Object {
      "Background": "#33E1E1E1",
      "BorderBrush": "#55FF00FF",
      "BorderThickness": "1,1,1,1",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Foreground": "#FFFFFFFF",
      "Height": 50,
      "HorizontalAlignment": "Left",
      "Margin": "0,0,0,0",
      "Padding": "12,5,0,7",
      "Text": "",
      "VerticalAlignment": "Top",
      "Visibility": "Visible",
      "Width": 800,
      "XamlType": "Windows.UI.Xaml.Controls.ComboBox",
      "children": Array [
        Object {
          "Background": null,
          "BorderBrush": null,
          "BorderThickness": "0,0,0,0",
          "Clip": null,
          "CornerRadius": "0,0,0,0",
          "FlowDirection": "LeftToRight",
          "HorizontalAlignment": "Stretch",
          "Margin": "0,0,0,0",
          "Name": "LayoutRoot",
          "Padding": "0,0,0,0",
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "XamlType": "Windows.UI.Xaml.Controls.Grid",
          "children": Array [
            Object {
              "Background": "#33E1E1E1",
              "BorderBrush": "#55FF00FF",
              "BorderThickness": "1,1,1,1",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "HorizontalAlignment": "Stretch",
              "Margin": "0,0,0,0",
              "Name": "Background",
              "Padding": "0,0,0,0",
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "XamlType": "Windows.UI.Xaml.Controls.Border",
            },
            Object {
              "Background": "#FF409EFE",
              "BorderBrush": "#66000000",
              "BorderThickness": "1,1,1,1",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "HorizontalAlignment": "Stretch",
              "Margin": "0,0,0,0",
              "Name": "HighlightBackground",
              "Padding": "0,0,0,0",
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "XamlType": "Windows.UI.Xaml.Controls.Border",
            },
            Object {
              "Background": null,
              "BorderBrush": null,
              "BorderThickness": "0,0,0,0",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "Foreground": "#FFFFFFFF",
              "HorizontalAlignment": "Stretch",
              "Margin": "12,5,0,7",
              "Name": "ContentPresenter",
              "Padding": "0,0,0,0",
              "VerticalAlignment": "Center",
              "Visibility": "Visible",
              "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
              "children": Array [
                Object {
                  "Clip": null,
                  "FlowDirection": "LeftToRight",
                  "Foreground": "#99000000",
                  "HorizontalAlignment": "Stretch",
                  "Margin": "0,0,0,0",
                  "Name": "PlaceholderTextBlock",
                  "Padding": "0,0,0,0",
                  "Text": "",
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
                },
              ],
            },
            Object {
              "Clip": null,
              "FlowDirection": "LeftToRight",
              "Foreground": "#CC000000",
              "HorizontalAlignment": "Right",
              "Margin": "0,0,10,0",
              "Name": "DropDownGlyph",
              "VerticalAlignment": "Center",
              "Visibility": "Visible",
              "XamlType": "Windows.UI.Xaml.Controls.FontIcon",
              "children": Array [
                Object {
                  "Background": "#00000000",
                  "BorderBrush": null,
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "HorizontalAlignment": "Stretch",
                  "Margin": "0,0,0,0",
                  "Padding": "0,0,0,0",
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "XamlType": "Windows.UI.Xaml.Controls.Grid",
                  "children": Array [
                    Object {
                      "Clip": null,
                      "FlowDirection": "LeftToRight",
                      "Foreground": "#CC000000",
                      "HorizontalAlignment": "Stretch",
                      "Margin": "0,0,0,0",
                      "Padding": "0,0,0,0",
                      "Text": "",
                      "VerticalAlignment": "Center",
                      "Visibility": "Visible",
                      "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
                    },
                  ],
                },
              ],
            },
            Object {
              "Background": null,
              "BorderBrush": null,
              "BorderThickness": "0,0,0,0",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "Foreground": "#99000000",
              "HorizontalAlignment": "Stretch",
              "Margin": "0,0,0,0",
              "Name": "DescriptionPresenter",
              "Padding": "0,0,0,0",
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
            },
            Object {
              "Clip": null,
              "FlowDirection": "LeftToRight",
              "HorizontalAlignment": "Stretch",
              "Margin": "0,0,0,0",
              "Name": "Popup",
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "XamlType": "Windows.UI.Xaml.Controls.Primitives.Popup",
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`LegacyControlStyleTest ControlStyleTestWithRegularBorder 1`] = `
Object {
  "AutomationId": "control-style-switch-view",
  "Background": null,
  "BorderBrush": "#00000000",
  "BorderThickness": "0,0,0,0",
  "Clip": null,
  "CornerRadius": "0,0,0,0",
  "FlowDirection": "LeftToRight",
  "Height": 300,
  "HorizontalAlignment": "Stretch",
  "Margin": "0,0,0,0",
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 800,
  "XamlType": "Microsoft.ReactNative.ViewPanel",
  "children": Array [
    Object {
      "Background": "#33E1E1E1",
      "BorderBrush": "#55FF00FF",
      "BorderThickness": "1,1,1,1",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Foreground": "#FFFFFFFF",
      "Height": 50,
      "HorizontalAlignment": "Left",
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "VerticalAlignment": "Center",
      "Visibility": "Visible",
      "Width": 51,
      "XamlType": "Windows.UI.Xaml.Controls.ToggleSwitch",
      "children": Array [
        Object {
          "Background": "#33E1E1E1",
          "BorderBrush": "#55FF00FF",
          "BorderThickness": "1,1,1,1",
          "Clip": null,
          "CornerRadius": "0,0,0,0",
          "FlowDirection": "LeftToRight",
          "HorizontalAlignment": "Stretch",
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "XamlType": "Windows.UI.Xaml.Controls.Grid",
          "children": Array [
            Object {
              "Background": null,
              "BorderBrush": null,
              "BorderThickness": "0,0,0,0",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "HorizontalAlignment": "Left",
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "VerticalAlignment": "Top",
              "Visibility": "Visible",
              "XamlType": "Windows.UI.Xaml.Controls.Grid",
              "children": Array [
                Object {
                  "Background": "#00FFFFFF",
                  "BorderBrush": null,
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "HorizontalAlignment": "Stretch",
                  "Margin": "0,5,0,5",
                  "Name": "SwitchAreaGrid",
                  "Padding": "0,0,0,0",
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "XamlType": "Windows.UI.Xaml.Controls.Grid",
                },
                Object {
                  "Background": null,
                  "BorderBrush": null,
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "Foreground": "#FFFFFFFF",
                  "HorizontalAlignment": "Left",
                  "Margin": "0,0,0,0",
                  "Name": "OffContentPresenter",
                  "Padding": "0,0,0,0",
                  "VerticalAlignment": "Center",
                  "Visibility": "Visible",
                  "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
                },
                Object {
                  "Background": null,
                  "BorderBrush": null,
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "Foreground": "#FFFFFFFF",
                  "HorizontalAlignment": "Left",
                  "Margin": "0,0,0,0",
                  "Name": "OnContentPresenter",
                  "Padding": "0,0,0,0",
                  "VerticalAlignment": "Center",
                  "Visibility": "Visible",
                  "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
                },
                Object {
                  "Clip": null,
                  "FlowDirection": "LeftToRight",
                  "Height": 20,
                  "HorizontalAlignment": "Stretch",
                  "Margin": "0,0,0,0",
                  "Name": "OuterBorder",
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "Width": 40,
                  "XamlType": "Windows.UI.Xaml.Shapes.Rectangle",
                },
                Object {
                  "Clip": null,
                  "FlowDirection": "LeftToRight",
                  "Height": 20,
                  "HorizontalAlignment": "Stretch",
                  "Margin": "0,0,0,0",
                  "Name": "SwitchKnobBounds",
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "Width": 40,
                  "XamlType": "Windows.UI.Xaml.Shapes.Rectangle",
                },
                Object {
                  "Background": null,
                  "BorderBrush": null,
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "Height": 20,
                  "HorizontalAlignment": "Left",
                  "Margin": "0,0,0,0",
                  "Name": "SwitchKnob",
                  "Padding": "0,0,0,0",
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "Width": 20,
                  "XamlType": "Windows.UI.Xaml.Controls.Grid",
                  "children": Array [
                    Object {
                      "Clip": null,
                      "FlowDirection": "LeftToRight",
                      "Height": 10,
                      "HorizontalAlignment": "Stretch",
                      "Margin": "0,0,0,0",
                      "Name": "SwitchKnobOn",
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "Width": 10,
                      "XamlType": "Windows.UI.Xaml.Shapes.Ellipse",
                    },
                    Object {
                      "Clip": null,
                      "FlowDirection": "LeftToRight",
                      "Height": 10,
                      "HorizontalAlignment": "Stretch",
                      "Margin": "0,0,0,0",
                      "Name": "SwitchKnobOff",
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "Width": 10,
                      "XamlType": "Windows.UI.Xaml.Shapes.Ellipse",
                    },
                  ],
                },
                Object {
                  "Background": "#33000000",
                  "BorderBrush": "#00FFFFFF",
                  "BorderThickness": "1,1,1,1",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "Foreground": "#FFFFFFFF",
                  "HorizontalAlignment": "Stretch",
                  "Margin": "0,0,0,0",
                  "Name": "SwitchThumb",
                  "Padding": "0,0,0,0",
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "XamlType": "Windows.UI.Xaml.Controls.Primitives.Thumb",
                  "children": Array [
                    Object {
                      "Clip": null,
                      "FlowDirection": "LeftToRight",
                      "HorizontalAlignment": "Stretch",
                      "Margin": "0,0,0,0",
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "XamlType": "Windows.UI.Xaml.Shapes.Rectangle",
                    },
                  ],
                },
              ],
            },
          ],
        },
      ],
    },
    Object {
      "Background": "#33E1E1E1",
      "BorderBrush": "#55FF00FF",
      "BorderThickness": "1,1,1,1",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Foreground": "#FFFFFFFF",
      "Height": 50,
      "HorizontalAlignment": "Stretch",
      "Margin": "0,0,0,0",
      "Padding": "10,10,10,10",
      "Text": "",
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 800,
      "XamlType": "Windows.UI.Xaml.Controls.TextBox",
      "children": Array [
        Object {
          "Background": null,
          "BorderBrush": null,
          "BorderThickness": "0,0,0,0",
          "Clip": null,
          "CornerRadius": "0,0,0,0",
          "FlowDirection": "LeftToRight",
          "HorizontalAlignment": "Stretch",
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "XamlType": "Windows.UI.Xaml.Controls.Grid",
          "children": Array [
            Object {
              "Background": "#33E1E1E1",
              "BorderBrush": "#55FF00FF",
              "BorderThickness": "1,1,1,1",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "HorizontalAlignment": "Stretch",
              "Margin": "0,0,0,0",
              "Name": "BorderElement",
              "Padding": "0,0,0,0",
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "XamlType": "Windows.UI.Xaml.Controls.Border",
            },
            Object {
              "Background": "#00FFFFFF",
              "BorderBrush": "#00FFFFFF",
              "BorderThickness": "0,0,0,0",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "Foreground": "#FFFFFFFF",
              "HorizontalAlignment": "Stretch",
              "Margin": "1,1,1,1",
              "Name": "ContentElement",
              "Padding": "10,10,10,10",
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "XamlType": "Windows.UI.Xaml.Controls.ScrollViewer",
              "children": Array [
                Object {
                  "Background": null,
                  "BorderBrush": "#00FFFFFF",
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "HorizontalAlignment": "Stretch",
                  "Margin": "0,0,0,0",
                  "Name": "Root",
                  "Padding": "0,0,0,0",
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "XamlType": "Windows.UI.Xaml.Controls.Border",
                  "children": Array [
                    Object {
                      "Background": "#00FFFFFF",
                      "BorderBrush": null,
                      "BorderThickness": "0,0,0,0",
                      "Clip": null,
                      "CornerRadius": "0,0,0,0",
                      "FlowDirection": "LeftToRight",
                      "HorizontalAlignment": "Stretch",
                      "Margin": "0,0,0,0",
                      "Padding": "0,0,0,0",
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "XamlType": "Windows.UI.Xaml.Controls.Grid",
                      "children": Array [
                        Object {
                          "Background": null,
                          "BorderBrush": null,
                          "BorderThickness": "0,0,0,0",
                          "Clip": "Windows.UI.Xaml.Media.RectangleGeometry",
                          "CornerRadius": "0,0,0,0",
                          "FlowDirection": "LeftToRight",
                          "Foreground": "#FFFFFFFF",
                          "HorizontalAlignment": "Stretch",
                          "Margin": "10,10,10,10",
                          "Name": "ScrollContentPresenter",
                          "Padding": "0,0,0,0",
                          "VerticalAlignment": "Stretch",
                          "Visibility": "Visible",
                          "XamlType": "Windows.UI.Xaml.Controls.ScrollContentPresenter",
                          "children": Array [
                            Object {
                              "Clip": null,
                              "FlowDirection": "LeftToRight",
                              "HorizontalAlignment": "Stretch",
                              "Margin": "0,0,0,0",
                              "VerticalAlignment": "Stretch",
                              "Visibility": "Visible",
                              "XamlType": "Windows.UI.Xaml.FrameworkElement",
                            },
                          ],
                        },
                        Object {
                          "Background": null,
                          "BorderBrush": null,
                          "BorderThickness": "0,0,0,0",
                          "Clip": null,
                          "CornerRadius": "0,0,0,0",
                          "FlowDirection": "LeftToRight",
                          "HorizontalAlignment": "Stretch",
                          "Margin": "0,0,0,0",
                          "Padding": "0,0,0,0",
                          "VerticalAlignment": "Stretch",
                          "Visibility": "Visible",
                          "XamlType": "Windows.UI.Xaml.Controls.Grid",
                        },
                      ],
                    },
                  ],
                },
              ],
            },
            Object {
              "Clip": null,
              "FlowDirection": "LeftToRight",
              "Foreground": "#B3E1E1E1",
              "HorizontalAlignment": "Stretch",
              "Margin": "1,1,1,1",
              "Name": "PlaceholderTextContentPresenter",
              "Padding": "10,10,10,10",
              "Text": "TextBox",
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
            },
            Object {
              "Background": null,
              "BorderBrush": null,
              "BorderThickness": "0,0,0,0",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "Foreground": "#99000000",
              "HorizontalAlignment": "Stretch",
              "Margin": "0,0,0,0",
              "Name": "DescriptionPresenter",
              "Padding": "0,0,0,0",
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
            },
          ],
        },
      ],
    },
    Object {
      "Background": "#33E1E1E1",
      "BorderBrush": "#55FF00FF",
      "BorderThickness": "1,1,1,1",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Foreground": "#FFFFFFFF",
      "Height": 50,
      "HorizontalAlignment": "Stretch",
      "Margin": "0,0,0,0",
      "Padding": "10,10,10,10",
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 800,
      "XamlType": "Windows.UI.Xaml.Controls.PasswordBox",
      "children": Array [
        Object {
          "Background": null,
          "BorderBrush": null,
          "BorderThickness": "0,0,0,0",
          "Clip": null,
          "CornerRadius": "0,0,0,0",
          "FlowDirection": "LeftToRight",
          "HorizontalAlignment": "Stretch",
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "XamlType": "Windows.UI.Xaml.Controls.Grid",
          "children": Array [
            Object {
              "Background": "#33E1E1E1",
              "BorderBrush": "#55FF00FF",
              "BorderThickness": "1,1,1,1",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "HorizontalAlignment": "Stretch",
              "Margin": "0,0,0,0",
              "Name": "BorderElement",
              "Padding": "0,0,0,0",
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "XamlType": "Windows.UI.Xaml.Controls.Border",
            },
            Object {
              "Background": "#00FFFFFF",
              "BorderBrush": "#00FFFFFF",
              "BorderThickness": "0,0,0,0",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "Foreground": "#FFFFFFFF",
              "HorizontalAlignment": "Stretch",
              "Margin": "1,1,1,1",
              "Name": "ContentElement",
              "Padding": "10,10,10,10",
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "XamlType": "Windows.UI.Xaml.Controls.ScrollViewer",
              "children": Array [
                Object {
                  "Background": null,
                  "BorderBrush": "#00FFFFFF",
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "HorizontalAlignment": "Stretch",
                  "Margin": "0,0,0,0",
                  "Name": "Root",
                  "Padding": "0,0,0,0",
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "XamlType": "Windows.UI.Xaml.Controls.Border",
                  "children": Array [
                    Object {
                      "Background": "#00FFFFFF",
                      "BorderBrush": null,
                      "BorderThickness": "0,0,0,0",
                      "Clip": null,
                      "CornerRadius": "0,0,0,0",
                      "FlowDirection": "LeftToRight",
                      "HorizontalAlignment": "Stretch",
                      "Margin": "0,0,0,0",
                      "Padding": "0,0,0,0",
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "XamlType": "Windows.UI.Xaml.Controls.Grid",
                      "children": Array [
                        Object {
                          "Background": null,
                          "BorderBrush": null,
                          "BorderThickness": "0,0,0,0",
                          "Clip": "Windows.UI.Xaml.Media.RectangleGeometry",
                          "CornerRadius": "0,0,0,0",
                          "FlowDirection": "LeftToRight",
                          "Foreground": "#FFFFFFFF",
                          "HorizontalAlignment": "Stretch",
                          "Margin": "10,10,10,10",
                          "Name": "ScrollContentPresenter",
                          "Padding": "0,0,0,0",
                          "VerticalAlignment": "Stretch",
                          "Visibility": "Visible",
                          "XamlType": "Windows.UI.Xaml.Controls.ScrollContentPresenter",
                          "children": Array [
                            Object {
                              "Clip": null,
                              "FlowDirection": "LeftToRight",
                              "HorizontalAlignment": "Stretch",
                              "Margin": "0,0,0,0",
                              "VerticalAlignment": "Stretch",
                              "Visibility": "Visible",
                              "XamlType": "Windows.UI.Xaml.FrameworkElement",
                            },
                          ],
                        },
                        Object {
                          "Background": null,
                          "BorderBrush": null,
                          "BorderThickness": "0,0,0,0",
                          "Clip": null,
                          "CornerRadius": "0,0,0,0",
                          "FlowDirection": "LeftToRight",
                          "HorizontalAlignment": "Stretch",
                          "Margin": "0,0,0,0",
                          "Padding": "0,0,0,0",
                          "VerticalAlignment": "Stretch",
                          "Visibility": "Visible",
                          "XamlType": "Windows.UI.Xaml.Controls.Grid",
                        },
                      ],
                    },
                  ],
                },
              ],
            },
            Object {
              "Clip": null,
              "FlowDirection": "LeftToRight",
              "Foreground": "#B3E1E1E1",
              "HorizontalAlignment": "Stretch",
              "Margin": "1,1,1,1",
              "Name": "PlaceholderTextContentPresenter",
              "Padding": "10,10,10,10",
              "Text": "Password",
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
            },
            Object {
              "Background": null,
              "BorderBrush": null,
              "BorderThickness": "0,0,0,0",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "Foreground": "#99000000",
              "HorizontalAlignment": "Stretch",
              "Margin": "0,0,0,0",
              "Name": "DescriptionPresenter",
              "Padding": "0,0,0,0",
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
            },
          ],
        },
      ],
    },
    Object {
      "Background": "#33E1E1E1",
      "BorderBrush": "#55FF00FF",
      "BorderThickness": "1,1,1,1",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Foreground": "#FFFFFFFF",
      "Height": 50,
      "HorizontalAlignment": "Left",
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "VerticalAlignment": "Center",
      "Visibility": "Visible",
      "Width": 150,
      "XamlType": "Windows.UI.Xaml.Controls.CalendarDatePicker",
      "children": Array [
        Object {
          "Background": null,
          "BorderBrush": null,
          "BorderThickness": "0,0,0,0",
          "Clip": null,
          "CornerRadius": "0,0,0,0",
          "FlowDirection": "LeftToRight",
          "HorizontalAlignment": "Stretch",
          "Margin": "0,0,0,0",
          "Name": "Root",
          "Padding": "0,0,0,0",
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "XamlType": "Windows.UI.Xaml.Controls.Grid",
          "children": Array [
            Object {
              "Background": "#33E1E1E1",
              "BorderBrush": "#55FF00FF",
              "BorderThickness": "1,1,1,1",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "HorizontalAlignment": "Stretch",
              "Margin": "0,0,0,0",
              "Name": "Background",
              "Padding": "0,0,0,0",
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "XamlType": "Windows.UI.Xaml.Controls.Border",
            },
            Object {
              "Clip": null,
              "FlowDirection": "LeftToRight",
              "Foreground": "#99000000",
              "HorizontalAlignment": "Left",
              "Margin": "0,0,0,0",
              "Name": "DateText",
              "Padding": "12,0,0,2",
              "Text": "select a date",
              "VerticalAlignment": "Center",
              "Visibility": "Visible",
              "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
            },
            Object {
              "Clip": null,
              "FlowDirection": "LeftToRight",
              "Foreground": "#CC000000",
              "HorizontalAlignment": "Center",
              "Margin": "0,0,0,0",
              "Name": "CalendarGlyph",
              "VerticalAlignment": "Center",
              "Visibility": "Visible",
              "XamlType": "Windows.UI.Xaml.Controls.FontIcon",
              "children": Array [
                Object {
                  "Background": "#00000000",
                  "BorderBrush": null,
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "HorizontalAlignment": "Stretch",
                  "Margin": "0,0,0,0",
                  "Padding": "0,0,0,0",
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "XamlType": "Windows.UI.Xaml.Controls.Grid",
                  "children": Array [
                    Object {
                      "Clip": null,
                      "FlowDirection": "LeftToRight",
                      "Foreground": "#CC000000",
                      "HorizontalAlignment": "Stretch",
                      "Margin": "0,0,0,0",
                      "Padding": "0,0,0,0",
                      "Text": "",
                      "VerticalAlignment": "Center",
                      "Visibility": "Visible",
                      "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
                    },
                  ],
                },
              ],
            },
            Object {
              "Background": null,
              "BorderBrush": null,
              "BorderThickness": "0,0,0,0",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "Foreground": "#99000000",
              "HorizontalAlignment": "Stretch",
              "Margin": "0,0,0,0",
              "Name": "DescriptionPresenter",
              "Padding": "0,0,0,0",
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
            },
          ],
        },
      ],
    },
    Object {
      "Background": "#33E1E1E1",
      "BorderBrush": "#55FF00FF",
      "BorderThickness": "1,1,1,1",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Foreground": "#FFFFFFFF",
      "Height": 50,
      "HorizontalAlignment": "Left",
      "Margin": "0,0,0,0",
      "Padding": "12,5,0,7",
      "Text": "",
      "VerticalAlignment": "Top",
      "Visibility": "Visible",
      "Width": 800,
      "XamlType": "Windows.UI.Xaml.Controls.ComboBox",
      "children": Array [
        Object {
          "Background": null,
          "BorderBrush": null,
          "BorderThickness": "0,0,0,0",
          "Clip": null,
          "CornerRadius": "0,0,0,0",
          "FlowDirection": "LeftToRight",
          "HorizontalAlignment": "Stretch",
          "Margin": "0,0,0,0",
          "Name": "LayoutRoot",
          "Padding": "0,0,0,0",
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "XamlType": "Windows.UI.Xaml.Controls.Grid",
          "children": Array [
            Object {
              "Background": "#33E1E1E1",
              "BorderBrush": "#55FF00FF",
              "BorderThickness": "1,1,1,1",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "HorizontalAlignment": "Stretch",
              "Margin": "0,0,0,0",
              "Name": "Background",
              "Padding": "0,0,0,0",
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "XamlType": "Windows.UI.Xaml.Controls.Border",
            },
            Object {
              "Background": "#FF409EFE",
              "BorderBrush": "#66000000",
              "BorderThickness": "1,1,1,1",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "HorizontalAlignment": "Stretch",
              "Margin": "0,0,0,0",
              "Name": "HighlightBackground",
              "Padding": "0,0,0,0",
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "XamlType": "Windows.UI.Xaml.Controls.Border",
            },
            Object {
              "Background": null,
              "BorderBrush": null,
              "BorderThickness": "0,0,0,0",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "Foreground": "#FFFFFFFF",
              "HorizontalAlignment": "Stretch",
              "Margin": "12,5,0,7",
              "Name": "ContentPresenter",
              "Padding": "0,0,0,0",
              "VerticalAlignment": "Center",
              "Visibility": "Visible",
              "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
              "children": Array [
                Object {
                  "Clip": null,
                  "FlowDirection": "LeftToRight",
                  "Foreground": "#99000000",
                  "HorizontalAlignment": "Stretch",
                  "Margin": "0,0,0,0",
                  "Name": "PlaceholderTextBlock",
                  "Padding": "0,0,0,0",
                  "Text": "",
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
                },
              ],
            },
            Object {
              "Clip": null,
              "FlowDirection": "LeftToRight",
              "Foreground": "#CC000000",
              "HorizontalAlignment": "Right",
              "Margin": "0,0,10,0",
              "Name": "DropDownGlyph",
              "VerticalAlignment": "Center",
              "Visibility": "Visible",
              "XamlType": "Windows.UI.Xaml.Controls.FontIcon",
              "children": Array [
                Object {
                  "Background": "#00000000",
                  "BorderBrush": null,
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "HorizontalAlignment": "Stretch",
                  "Margin": "0,0,0,0",
                  "Padding": "0,0,0,0",
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "XamlType": "Windows.UI.Xaml.Controls.Grid",
                  "children": Array [
                    Object {
                      "Clip": null,
                      "FlowDirection": "LeftToRight",
                      "Foreground": "#CC000000",
                      "HorizontalAlignment": "Stretch",
                      "Margin": "0,0,0,0",
                      "Padding": "0,0,0,0",
                      "Text": "",
                      "VerticalAlignment": "Center",
                      "Visibility": "Visible",
                      "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
                    },
                  ],
                },
              ],
            },
            Object {
              "Background": null,
              "BorderBrush": null,
              "BorderThickness": "0,0,0,0",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "Foreground": "#99000000",
              "HorizontalAlignment": "Stretch",
              "Margin": "0,0,0,0",
              "Name": "DescriptionPresenter",
              "Padding": "0,0,0,0",
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
            },
            Object {
              "Clip": null,
              "FlowDirection": "LeftToRight",
              "HorizontalAlignment": "Stretch",
              "Margin": "0,0,0,0",
              "Name": "Popup",
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "XamlType": "Windows.UI.Xaml.Controls.Primitives.Popup",
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`LegacyControlStyleTest ControlStyleTestWithRoundBorder 1`] = `
Object {
  "AutomationId": "control-style-switch-view",
  "Background": null,
  "BorderBrush": "#00000000",
  "BorderThickness": "0,0,0,0",
  "Clip": null,
  "CornerRadius": "0,0,0,0",
  "FlowDirection": "LeftToRight",
  "Height": 300,
  "HorizontalAlignment": "Stretch",
  "Margin": "0,0,0,0",
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 800,
  "XamlType": "Microsoft.ReactNative.ViewPanel",
  "children": Array [
    Object {
      "Background": "#33000000",
      "BorderBrush": "#5500FF00",
      "BorderThickness": "10,10,10,10",
      "Clip": null,
      "CornerRadius": "10,10,10,10",
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "Height": 50,
      "HorizontalAlignment": "Left",
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "VerticalAlignment": "Center",
      "Visibility": "Visible",
      "Width": 51,
      "XamlType": "Windows.UI.Xaml.Controls.ToggleSwitch",
      "children": Array [
        Object {
          "Background": "#33000000",
          "BorderBrush": "#5500FF00",
          "BorderThickness": "10,10,10,10",
          "Clip": null,
          "CornerRadius": "10,10,10,10",
          "FlowDirection": "LeftToRight",
          "HorizontalAlignment": "Stretch",
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "XamlType": "Windows.UI.Xaml.Controls.Grid",
          "children": Array [
            Object {
              "Background": null,
              "BorderBrush": null,
              "BorderThickness": "0,0,0,0",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "HorizontalAlignment": "Left",
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "VerticalAlignment": "Top",
              "Visibility": "Visible",
              "XamlType": "Windows.UI.Xaml.Controls.Grid",
              "children": Array [
                Object {
                  "Background": "#00FFFFFF",
                  "BorderBrush": null,
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "HorizontalAlignment": "Stretch",
                  "Margin": "0,5,0,5",
                  "Name": "SwitchAreaGrid",
                  "Padding": "0,0,0,0",
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "XamlType": "Windows.UI.Xaml.Controls.Grid",
                },
                Object {
                  "Background": null,
                  "BorderBrush": null,
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "Foreground": "#FF000000",
                  "HorizontalAlignment": "Left",
                  "Margin": "0,0,0,0",
                  "Name": "OffContentPresenter",
                  "Padding": "0,0,0,0",
                  "VerticalAlignment": "Center",
                  "Visibility": "Visible",
                  "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
                },
                Object {
                  "Background": null,
                  "BorderBrush": null,
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "Foreground": "#FF000000",
                  "HorizontalAlignment": "Left",
                  "Margin": "0,0,0,0",
                  "Name": "OnContentPresenter",
                  "Padding": "0,0,0,0",
                  "VerticalAlignment": "Center",
                  "Visibility": "Visible",
                  "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
                },
                Object {
                  "Clip": null,
                  "FlowDirection": "LeftToRight",
                  "Height": 20,
                  "HorizontalAlignment": "Stretch",
                  "Margin": "0,0,0,0",
                  "Name": "OuterBorder",
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "Width": 40,
                  "XamlType": "Windows.UI.Xaml.Shapes.Rectangle",
                },
                Object {
                  "Clip": null,
                  "FlowDirection": "LeftToRight",
                  "Height": 20,
                  "HorizontalAlignment": "Stretch",
                  "Margin": "0,0,0,0",
                  "Name": "SwitchKnobBounds",
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "Width": 40,
                  "XamlType": "Windows.UI.Xaml.Shapes.Rectangle",
                },
                Object {
                  "Background": null,
                  "BorderBrush": null,
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "Height": 20,
                  "HorizontalAlignment": "Left",
                  "Margin": "0,0,0,0",
                  "Name": "SwitchKnob",
                  "Padding": "0,0,0,0",
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "Width": 20,
                  "XamlType": "Windows.UI.Xaml.Controls.Grid",
                  "children": Array [
                    Object {
                      "Clip": null,
                      "FlowDirection": "LeftToRight",
                      "Height": 10,
                      "HorizontalAlignment": "Stretch",
                      "Margin": "0,0,0,0",
                      "Name": "SwitchKnobOn",
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "Width": 10,
                      "XamlType": "Windows.UI.Xaml.Shapes.Ellipse",
                    },
                    Object {
                      "Clip": null,
                      "FlowDirection": "LeftToRight",
                      "Height": 10,
                      "HorizontalAlignment": "Stretch",
                      "Margin": "0,0,0,0",
                      "Name": "SwitchKnobOff",
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "Width": 10,
                      "XamlType": "Windows.UI.Xaml.Shapes.Ellipse",
                    },
                  ],
                },
                Object {
                  "Background": "#33000000",
                  "BorderBrush": "#00FFFFFF",
                  "BorderThickness": "1,1,1,1",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "Foreground": "#FF000000",
                  "HorizontalAlignment": "Stretch",
                  "Margin": "0,0,0,0",
                  "Name": "SwitchThumb",
                  "Padding": "0,0,0,0",
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "XamlType": "Windows.UI.Xaml.Controls.Primitives.Thumb",
                  "children": Array [
                    Object {
                      "Clip": null,
                      "FlowDirection": "LeftToRight",
                      "HorizontalAlignment": "Stretch",
                      "Margin": "0,0,0,0",
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "XamlType": "Windows.UI.Xaml.Shapes.Rectangle",
                    },
                  ],
                },
              ],
            },
          ],
        },
      ],
    },
    Object {
      "Background": "#33000000",
      "BorderBrush": "#5500FF00",
      "BorderThickness": "10,10,10,10",
      "Clip": null,
      "CornerRadius": "10,10,10,10",
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "Height": 50,
      "HorizontalAlignment": "Stretch",
      "Margin": "0,0,0,0",
      "Padding": "10,10,10,10",
      "Text": "",
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 800,
      "XamlType": "Windows.UI.Xaml.Controls.TextBox",
      "children": Array [
        Object {
          "Background": null,
          "BorderBrush": null,
          "BorderThickness": "0,0,0,0",
          "Clip": null,
          "CornerRadius": "0,0,0,0",
          "FlowDirection": "LeftToRight",
          "HorizontalAlignment": "Stretch",
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "XamlType": "Windows.UI.Xaml.Controls.Grid",
          "children": Array [
            Object {
              "Background": "#33000000",
              "BorderBrush": "#5500FF00",
              "BorderThickness": "10,10,10,10",
              "Clip": null,
              "CornerRadius": "10,10,10,10",
              "FlowDirection": "LeftToRight",
              "HorizontalAlignment": "Stretch",
              "Margin": "0,0,0,0",
              "Name": "BorderElement",
              "Padding": "0,0,0,0",
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "XamlType": "Windows.UI.Xaml.Controls.Border",
            },
            Object {
              "Background": "#00FFFFFF",
              "BorderBrush": "#00FFFFFF",
              "BorderThickness": "0,0,0,0",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "Foreground": "#FF000000",
              "HorizontalAlignment": "Stretch",
              "Margin": "10,10,10,10",
              "Name": "ContentElement",
              "Padding": "10,10,10,10",
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "XamlType": "Windows.UI.Xaml.Controls.ScrollViewer",
              "children": Array [
                Object {
                  "Background": null,
                  "BorderBrush": "#00FFFFFF",
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "HorizontalAlignment": "Stretch",
                  "Margin": "0,0,0,0",
                  "Name": "Root",
                  "Padding": "0,0,0,0",
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "XamlType": "Windows.UI.Xaml.Controls.Border",
                  "children": Array [
                    Object {
                      "Background": "#00FFFFFF",
                      "BorderBrush": null,
                      "BorderThickness": "0,0,0,0",
                      "Clip": null,
                      "CornerRadius": "0,0,0,0",
                      "FlowDirection": "LeftToRight",
                      "HorizontalAlignment": "Stretch",
                      "Margin": "0,0,0,0",
                      "Padding": "0,0,0,0",
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "XamlType": "Windows.UI.Xaml.Controls.Grid",
                      "children": Array [
                        Object {
                          "Background": null,
                          "BorderBrush": null,
                          "BorderThickness": "0,0,0,0",
                          "Clip": "Windows.UI.Xaml.Media.RectangleGeometry",
                          "CornerRadius": "0,0,0,0",
                          "FlowDirection": "LeftToRight",
                          "Foreground": "#FF000000",
                          "HorizontalAlignment": "Stretch",
                          "Margin": "10,10,10,10",
                          "Name": "ScrollContentPresenter",
                          "Padding": "0,0,0,0",
                          "VerticalAlignment": "Stretch",
                          "Visibility": "Visible",
                          "XamlType": "Windows.UI.Xaml.Controls.ScrollContentPresenter",
                          "children": Array [
                            Object {
                              "Clip": null,
                              "FlowDirection": "LeftToRight",
                              "HorizontalAlignment": "Stretch",
                              "Margin": "0,0,0,0",
                              "VerticalAlignment": "Stretch",
                              "Visibility": "Visible",
                              "XamlType": "Windows.UI.Xaml.FrameworkElement",
                            },
                          ],
                        },
                        Object {
                          "Background": null,
                          "BorderBrush": null,
                          "BorderThickness": "0,0,0,0",
                          "Clip": null,
                          "CornerRadius": "0,0,0,0",
                          "FlowDirection": "LeftToRight",
                          "HorizontalAlignment": "Stretch",
                          "Margin": "0,0,0,0",
                          "Padding": "0,0,0,0",
                          "VerticalAlignment": "Stretch",
                          "Visibility": "Visible",
                          "XamlType": "Windows.UI.Xaml.Controls.Grid",
                        },
                      ],
                    },
                  ],
                },
              ],
            },
            Object {
              "Clip": null,
              "FlowDirection": "LeftToRight",
              "Foreground": "#B3E1E1E1",
              "HorizontalAlignment": "Stretch",
              "Margin": "10,10,10,10",
              "Name": "PlaceholderTextContentPresenter",
              "Padding": "10,10,10,10",
              "Text": "TextBox",
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
            },
            Object {
              "Background": null,
              "BorderBrush": null,
              "BorderThickness": "0,0,0,0",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "Foreground": "#99000000",
              "HorizontalAlignment": "Stretch",
              "Margin": "0,0,0,0",
              "Name": "DescriptionPresenter",
              "Padding": "0,0,0,0",
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
            },
          ],
        },
      ],
    },
    Object {
      "Background": "#33000000",
      "BorderBrush": "#5500FF00",
      "BorderThickness": "10,10,10,10",
      "Clip": null,
      "CornerRadius": "10,10,10,10",
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "Height": 50,
      "HorizontalAlignment": "Stretch",
      "Margin": "0,0,0,0",
      "Padding": "10,10,10,10",
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 800,
      "XamlType": "Windows.UI.Xaml.Controls.PasswordBox",
      "children": Array [
        Object {
          "Background": null,
          "BorderBrush": null,
          "BorderThickness": "0,0,0,0",
          "Clip": null,
          "CornerRadius": "0,0,0,0",
          "FlowDirection": "LeftToRight",
          "HorizontalAlignment": "Stretch",
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "XamlType": "Windows.UI.Xaml.Controls.Grid",
          "children": Array [
            Object {
              "Background": "#33000000",
              "BorderBrush": "#5500FF00",
              "BorderThickness": "10,10,10,10",
              "Clip": null,
              "CornerRadius": "10,10,10,10",
              "FlowDirection": "LeftToRight",
              "HorizontalAlignment": "Stretch",
              "Margin": "0,0,0,0",
              "Name": "BorderElement",
              "Padding": "0,0,0,0",
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "XamlType": "Windows.UI.Xaml.Controls.Border",
            },
            Object {
              "Background": "#00FFFFFF",
              "BorderBrush": "#00FFFFFF",
              "BorderThickness": "0,0,0,0",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "Foreground": "#FF000000",
              "HorizontalAlignment": "Stretch",
              "Margin": "10,10,10,10",
              "Name": "ContentElement",
              "Padding": "10,10,10,10",
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "XamlType": "Windows.UI.Xaml.Controls.ScrollViewer",
              "children": Array [
                Object {
                  "Background": null,
                  "BorderBrush": "#00FFFFFF",
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "HorizontalAlignment": "Stretch",
                  "Margin": "0,0,0,0",
                  "Name": "Root",
                  "Padding": "0,0,0,0",
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "XamlType": "Windows.UI.Xaml.Controls.Border",
                  "children": Array [
                    Object {
                      "Background": "#00FFFFFF",
                      "BorderBrush": null,
                      "BorderThickness": "0,0,0,0",
                      "Clip": null,
                      "CornerRadius": "0,0,0,0",
                      "FlowDirection": "LeftToRight",
                      "HorizontalAlignment": "Stretch",
                      "Margin": "0,0,0,0",
                      "Padding": "0,0,0,0",
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "XamlType": "Windows.UI.Xaml.Controls.Grid",
                      "children": Array [
                        Object {
                          "Background": null,
                          "BorderBrush": null,
                          "BorderThickness": "0,0,0,0",
                          "Clip": "Windows.UI.Xaml.Media.RectangleGeometry",
                          "CornerRadius": "0,0,0,0",
                          "FlowDirection": "LeftToRight",
                          "Foreground": "#FF000000",
                          "HorizontalAlignment": "Stretch",
                          "Margin": "10,10,10,10",
                          "Name": "ScrollContentPresenter",
                          "Padding": "0,0,0,0",
                          "VerticalAlignment": "Stretch",
                          "Visibility": "Visible",
                          "XamlType": "Windows.UI.Xaml.Controls.ScrollContentPresenter",
                          "children": Array [
                            Object {
                              "Clip": null,
                              "FlowDirection": "LeftToRight",
                              "HorizontalAlignment": "Stretch",
                              "Margin": "0,0,0,0",
                              "VerticalAlignment": "Stretch",
                              "Visibility": "Visible",
                              "XamlType": "Windows.UI.Xaml.FrameworkElement",
                            },
                          ],
                        },
                        Object {
                          "Background": null,
                          "BorderBrush": null,
                          "BorderThickness": "0,0,0,0",
                          "Clip": null,
                          "CornerRadius": "0,0,0,0",
                          "FlowDirection": "LeftToRight",
                          "HorizontalAlignment": "Stretch",
                          "Margin": "0,0,0,0",
                          "Padding": "0,0,0,0",
                          "VerticalAlignment": "Stretch",
                          "Visibility": "Visible",
                          "XamlType": "Windows.UI.Xaml.Controls.Grid",
                        },
                      ],
                    },
                  ],
                },
              ],
            },
            Object {
              "Clip": null,
              "FlowDirection": "LeftToRight",
              "Foreground": "#B3E1E1E1",
              "HorizontalAlignment": "Stretch",
              "Margin": "10,10,10,10",
              "Name": "PlaceholderTextContentPresenter",
              "Padding": "10,10,10,10",
              "Text": "Password",
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
            },
            Object {
              "Background": null,
              "BorderBrush": null,
              "BorderThickness": "0,0,0,0",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "Foreground": "#99000000",
              "HorizontalAlignment": "Stretch",
              "Margin": "0,0,0,0",
              "Name": "DescriptionPresenter",
              "Padding": "0,0,0,0",
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
            },
          ],
        },
      ],
    },
    Object {
      "Background": "#33000000",
      "BorderBrush": "#5500FF00",
      "BorderThickness": "10,10,10,10",
      "Clip": null,
      "CornerRadius": "10,10,10,10",
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "Height": 50,
      "HorizontalAlignment": "Left",
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "VerticalAlignment": "Center",
      "Visibility": "Visible",
      "Width": 150,
      "XamlType": "Windows.UI.Xaml.Controls.CalendarDatePicker",
      "children": Array [
        Object {
          "Background": null,
          "BorderBrush": null,
          "BorderThickness": "0,0,0,0",
          "Clip": null,
          "CornerRadius": "0,0,0,0",
          "FlowDirection": "LeftToRight",
          "HorizontalAlignment": "Stretch",
          "Margin": "0,0,0,0",
          "Name": "Root",
          "Padding": "0,0,0,0",
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "XamlType": "Windows.UI.Xaml.Controls.Grid",
          "children": Array [
            Object {
              "Background": "#33000000",
              "BorderBrush": "#5500FF00",
              "BorderThickness": "10,10,10,10",
              "Clip": null,
              "CornerRadius": "10,10,10,10",
              "FlowDirection": "LeftToRight",
              "HorizontalAlignment": "Stretch",
              "Margin": "0,0,0,0",
              "Name": "Background",
              "Padding": "0,0,0,0",
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "XamlType": "Windows.UI.Xaml.Controls.Border",
            },
            Object {
              "Clip": null,
              "FlowDirection": "LeftToRight",
              "Foreground": "#99000000",
              "HorizontalAlignment": "Left",
              "Margin": "0,0,0,0",
              "Name": "DateText",
              "Padding": "12,0,0,2",
              "Text": "select a date",
              "VerticalAlignment": "Center",
              "Visibility": "Visible",
              "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
            },
            Object {
              "Clip": null,
              "FlowDirection": "LeftToRight",
              "Foreground": "#CC000000",
              "HorizontalAlignment": "Center",
              "Margin": "0,0,0,0",
              "Name": "CalendarGlyph",
              "VerticalAlignment": "Center",
              "Visibility": "Visible",
              "XamlType": "Windows.UI.Xaml.Controls.FontIcon",
              "children": Array [
                Object {
                  "Background": "#00000000",
                  "BorderBrush": null,
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "HorizontalAlignment": "Stretch",
                  "Margin": "0,0,0,0",
                  "Padding": "0,0,0,0",
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "XamlType": "Windows.UI.Xaml.Controls.Grid",
                  "children": Array [
                    Object {
                      "Clip": null,
                      "FlowDirection": "LeftToRight",
                      "Foreground": "#CC000000",
                      "HorizontalAlignment": "Stretch",
                      "Margin": "0,0,0,0",
                      "Padding": "0,0,0,0",
                      "Text": "",
                      "VerticalAlignment": "Center",
                      "Visibility": "Visible",
                      "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
                    },
                  ],
                },
              ],
            },
            Object {
              "Background": null,
              "BorderBrush": null,
              "BorderThickness": "0,0,0,0",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "Foreground": "#99000000",
              "HorizontalAlignment": "Stretch",
              "Margin": "0,0,0,0",
              "Name": "DescriptionPresenter",
              "Padding": "0,0,0,0",
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
            },
          ],
        },
      ],
    },
    Object {
      "Background": "#33000000",
      "BorderBrush": "#5500FF00",
      "BorderThickness": "10,10,10,10",
      "Clip": null,
      "CornerRadius": "10,10,10,10",
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "Height": 50,
      "HorizontalAlignment": "Left",
      "Margin": "0,0,0,0",
      "Padding": "12,5,0,7",
      "Text": "",
      "VerticalAlignment": "Top",
      "Visibility": "Visible",
      "Width": 800,
      "XamlType": "Windows.UI.Xaml.Controls.ComboBox",
      "children": Array [
        Object {
          "Background": null,
          "BorderBrush": null,
          "BorderThickness": "0,0,0,0",
          "Clip": null,
          "CornerRadius": "0,0,0,0",
          "FlowDirection": "LeftToRight",
          "HorizontalAlignment": "Stretch",
          "Margin": "0,0,0,0",
          "Name": "LayoutRoot",
          "Padding": "0,0,0,0",
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "XamlType": "Windows.UI.Xaml.Controls.Grid",
          "children": Array [
            Object {
              "Background": "#33000000",
              "BorderBrush": "#5500FF00",
              "BorderThickness": "10,10,10,10",
              "Clip": null,
              "CornerRadius": "10,10,10,10",
              "FlowDirection": "LeftToRight",
              "HorizontalAlignment": "Stretch",
              "Margin": "0,0,0,0",
              "Name": "Background",
              "Padding": "0,0,0,0",
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "XamlType": "Windows.UI.Xaml.Controls.Border",
            },
            Object {
              "Background": "#FF409EFE",
              "BorderBrush": "#66000000",
              "BorderThickness": "10,10,10,10",
              "Clip": null,
              "CornerRadius": "10,10,10,10",
              "FlowDirection": "LeftToRight",
              "HorizontalAlignment": "Stretch",
              "Margin": "0,0,0,0",
              "Name": "HighlightBackground",
              "Padding": "0,0,0,0",
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "XamlType": "Windows.UI.Xaml.Controls.Border",
            },
            Object {
              "Background": null,
              "BorderBrush": null,
              "BorderThickness": "0,0,0,0",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "Foreground": "#FF000000",
              "HorizontalAlignment": "Stretch",
              "Margin": "12,5,0,7",
              "Name": "ContentPresenter",
              "Padding": "0,0,0,0",
              "VerticalAlignment": "Center",
              "Visibility": "Visible",
              "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
              "children": Array [
                Object {
                  "Clip": null,
                  "FlowDirection": "LeftToRight",
                  "Foreground": "#99000000",
                  "HorizontalAlignment": "Stretch",
                  "Margin": "0,0,0,0",
                  "Name": "PlaceholderTextBlock",
                  "Padding": "0,0,0,0",
                  "Text": "",
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
                },
              ],
            },
            Object {
              "Clip": null,
              "FlowDirection": "LeftToRight",
              "Foreground": "#CC000000",
              "HorizontalAlignment": "Right",
              "Margin": "0,0,10,0",
              "Name": "DropDownGlyph",
              "VerticalAlignment": "Center",
              "Visibility": "Visible",
              "XamlType": "Windows.UI.Xaml.Controls.FontIcon",
              "children": Array [
                Object {
                  "Background": "#00000000",
                  "BorderBrush": null,
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "HorizontalAlignment": "Stretch",
                  "Margin": "0,0,0,0",
                  "Padding": "0,0,0,0",
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "XamlType": "Windows.UI.Xaml.Controls.Grid",
                  "children": Array [
                    Object {
                      "Clip": null,
                      "FlowDirection": "LeftToRight",
                      "Foreground": "#CC000000",
                      "HorizontalAlignment": "Stretch",
                      "Margin": "0,0,0,0",
                      "Padding": "0,0,0,0",
                      "Text": "",
                      "VerticalAlignment": "Center",
                      "Visibility": "Visible",
                      "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
                    },
                  ],
                },
              ],
            },
            Object {
              "Background": null,
              "BorderBrush": null,
              "BorderThickness": "0,0,0,0",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "Foreground": "#99000000",
              "HorizontalAlignment": "Stretch",
              "Margin": "0,0,0,0",
              "Name": "DescriptionPresenter",
              "Padding": "0,0,0,0",
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
            },
            Object {
              "Clip": null,
              "FlowDirection": "LeftToRight",
              "HorizontalAlignment": "Stretch",
              "Margin": "0,0,0,0",
              "Name": "Popup",
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "XamlType": "Windows.UI.Xaml.Controls.Primitives.Popup",
            },
          ],
        },
      ],
    },
  ],
}
`;
